--- a/package.json
+++ b/package.json
@@ -5,19 +5,31 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
+    "@supabase/supabase-js": "^2.38.4",
+    "axios": "^1.0.0",
+    "es": "npm:@elastic/elasticsearch@^8.10.0",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
+    "tslib": "^2.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@nx/cypress": "17.0.2",
+    "@nx/esbuild": "17.0.2",
     "@nx/eslint": "17.0.2",
     "@nx/eslint-plugin": "17.0.2",
+    "@nx/jest": "17.0.2",
     "@nx/js": "17.0.2",
+    "@nx/node": "^17.0.2",
     "@nx/vite": "17.0.2",
     "@nx/vue": "17.0.2",
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
-    "@types/node": "16.11.7",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.3.1",
@@ -27,14 +39,22 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "10.4.13",
     "cypress": "^13.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-vue": "^9.16.1",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "17.0.2",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "tailwindcss": "3.2.7",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.1.3",
     "vite": "~4.3.9",
     "vitest": "~0.32.0",
